tests/ui/crate_local_distributed_slice/create_slice.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for constants
  --> $DIR/create_slice.rs:5:21
   |
LL | const MEOWS: [&str; _];
   |                     ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for constants
  --> $DIR/create_slice.rs:7:1
   |
LL | distributed_slice_element!(MEOWS, "mrow");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not allowed in type signatures
   |
help: replace this with a fully-specified type
   |
LL - distributed_slice_element!(MEOWS, "mrow");
LL + &str;
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0121`.
